[package]
name = "darktide-plugin-rtc"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
futures-timer = "3.0.3"
libc = "0.2.162"
matchbox_socket = "0.11.0"
tokio = { version = "1.45.0", features = ["full"] }
uuid = "1.16.0"

[build-dependencies]
bindgen = "0.71.0"
chrono = "0.4.41"

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
strip = "debuginfo"

# The MSVC toolchain cannot handle LTO properly. Some symbol related to
# panic unwind would always be missing.
# So we use a separate profile for when we can compile with LTO.
[profile.release-lto]
inherits = "release"
lto = true
